--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "api/index.js",
   "scripts": {
-    "test": "node api/index.js"
+    "start": "node api/index.js"
   },
   "keywords": [],
   "author": "",
